# tira

./: .coveragerc  .gitignore  pyproject.toml  readme.md
documentation/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: data_handler.py  generator.py  main.py  trie.py  ui.py
src/testing/: test_datahandler.py  test_generator.py  test_trie.py
