[project]
name = "tira_harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Karri Lumivirta",email = "lumivirta.karri@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

